Added face-detection-service to asynchronously process images against the detection model. Model locks up the entire thread. Updated the openapi schema to use underscores instead of camelcase so we dont have to map back and forth from database.
