# src/routes/face-detection-router.js
@@ -1,6 +1,8 @@
 import express from 'express';
 import DatabaseClient from '../database/database-client';
 import { CreateLogger } from '../util/logger';
+import { FaceDetectionRequestEvent } from '../services/face-detection-service';
+
 const router = express.Router();
 const logger = CreateLogger('Face Detection Router');
 const dbClient = new DatabaseClient();
@@ -8,17 +10,18 @@ const dbClient = new DatabaseClient();
 
 /*
     Creation endpoint for a request
-    Expects imageLocation in the body
+    Expects image_location in the body
 */
 router.post('/create', async (req, res) => {
     logger.info('Creating Face Detection Request', req.body);
-    if (!req.body?.imageLocation) {
-        res.status(400).send('{imageLocation: string} expected');
+    if (!req.body?.image_location) {
+        res.status(400).send('{image_location: string} expected');
         return;
     }
-    let result = await dbClient.createFaceIdRequest(req.body.imageLocation);
+    let result = await dbClient.createFaceIdRequest(req.body.image_location);
     logger.debug(result)
     if (result) {
+        FaceDetectionRequestEvent.emit('new', result); // Trigger the face detection service to start working
         res.status(201).json(result);
         return;
     }
